<resources>
    <string name="app_name">Explorer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- action -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_other">Other</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_confirm">OK</string>
    <string name="action_cancel">Cancel</string>
    <!-- navigation action -->
    <string name="action_nav_store">Store</string>
    <string name="action_nav_disk">SD Card</string>
    <string name="action_nav_camera">Camera</string>
    <string name="action_nav_download">Download</string>
    <string name="action_nav_picture">Pictures</string>
    <string name="action_nav_music">Music</string>
    <string name="action_nav_movie">Movie</string>

    <!-- menu action -->
    <string name="action_menu_copy">Copy</string>
    <string name="action_menu_cut">Cut</string>
    <string name="action_menu_add">Add</string>
    <string name="action_menu_delete">Delete</string>
    <string name="action_menu_share">Share</string>
    <string name="action_menu_rename">Rename</string>
    <string name="action_menu_information">Info</string>
    <string name="action_menu_sort">Sort</string>
    <string name="action_menu_folder">Folder</string>
    <string name="action_menu_new_folder">New Folder</string>
    <string name="action_menu_show_hidden_folder">Show hidden folder</string>
    <!-- file information -->
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="size">Size</string>
    <string name="content">Content</string>
    <string name="content_type">Content Type</string>
    <string name="modified">Modified</string>
    <!-- sort -->
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_size">Sort by size</string>
    <string name="sort_by_type">Sort by type</string>

    <!-- information -->
    <string name="msg_delete_file">Are you sure to delete the selected record?</string>
    <!-- dictionary -->
    <string name="permission">Permission</string>
</resources>
