<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new_folder"
        android:orderInCategory="100"
        android:title="@string/action_menu_new_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_menu_sort"
        app:showAsAction="never">
        <menu>
            <group android:id="@+id/sort_group" android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_zero"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/sort_by_name" />
                <item
                    android:id="@+id/action_sort_one"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/sort_by_date" />
                <item
                    android:id="@+id/action_sort_two"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/sort_by_size" />
                <item
                    android:id="@+id/action_sort_three"
                    android:checkable="true"
                    android:checked="false"
                    android:title="@string/sort_by_type" />
            </group>
        </menu>
    </item>
</menu>
