<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="99"
        android:title="@string/action_menu_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="99"
        android:title="@string/action_menu_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_menu_copy"
        android:orderInCategory="100"
        android:title="@string/action_menu_copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cut"
        android:icon="@drawable/ic_menu_move"
        android:orderInCategory="100"
        android:title="@string/action_menu_cut"
        app:showAsAction="never" />
    <group android:id="@+id/one_item_only">
        <item
            android:id="@+id/action_rename"
            android:icon="@drawable/ic_menu_edit"
            android:orderInCategory="100"
            android:title="@string/action_menu_rename"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_information"
            android:icon="@drawable/ic_menu_about"
            android:orderInCategory="100"
            android:title="@string/action_menu_information"
            app:showAsAction="never" />
    </group>
</menu>
